number_prettifier.ipynb: snake case method names. Comment wraps. Test for empty string

--- a/util/number_prettifier.ipynb
+++ b/util/number_prettifier.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "test_empty_string (__main__.PrettifierTest) ... ERROR\n",
       "test_hundreds_int (__main__.PrettifierTest) ... ok\n",
       "test_nine_trillion_decimal_string (__main__.PrettifierTest) ... ok\n",
       "test_nine_trillion_decimal_string_with_junk (__main__.PrettifierTest) ... ok\n",
@@ -24,19 +25,29 @@
       "test_two_million_decimal (__main__.PrettifierTest) ... ok\n",
       "test_zero_int (__main__.PrettifierTest) ... ok\n",
       "\n",
+      "======================================================================\n",
+      "ERROR: test_empty_string (__main__.PrettifierTest)\n",
       "----------------------------------------------------------------------\n",
-      "Ran 14 tests in 0.012s\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-5-8d2cc45ebb6b>\", line 116, in test_empty_string\n",
+      "    self.assertEqual(self.p.prettify(\"\"), None)\n",
+      "  File \"<ipython-input-5-8d2cc45ebb6b>\", line 87, in prettify\n",
+      "    number = float(number)\n",
+      "ValueError: could not convert string to float: \n",
       "\n",
-      "OK\n"
+      "----------------------------------------------------------------------\n",
+      "Ran 15 tests in 0.012s\n",
+      "\n",
+      "FAILED (errors=1)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.main.TestProgram at 0x1082aa470>"
+       "<unittest.main.TestProgram at 0x1085700f0>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +56,8 @@
     "class Prettifier():\n",
     "    \"\"\"\n",
     "    This class accepts a numeric type and returns a truncated, \"prettified\" string version.\n",
-    "    The prettified version should include one number after the decimal when the truncated number is not an integer.\n",
+    "    The prettified version should include one number after the decimal when the truncated number \n",
+    "    is not an integer.\n",
     "    It should prettify numbers greater than 6 digits and support millions, billions and trillions.\n",
     "    \"\"\"\n",
     "    \n",
@@ -60,7 +72,7 @@
     "        # be prettified\n",
     "        self.PRETTIFIER_MIN_VALUE = 1000000\n",
     "\n",
-    "    def getNumberSymbolIndex(self, number:float) -> int:\n",
+    "    def get_number_symbol_index(self, number:float) -> int:\n",
     "        from math import floor, log10\n",
     "        \"\"\"Takes a number and gets the index for the NUMBER_SYMBOLS list\n",
     "\n",
@@ -85,7 +97,7 @@
     "        # min ensures that we do not go past max large number index of '4'\n",
     "        return min(len(self.NUMBER_SYMBOLS)-1, number_symbols_idx)\n",
     "\n",
-    "    def handleAsInt(self, number:float) -> bool:\n",
+    "    def handle_as_int(self, number:float) -> bool:\n",
     "        \"\"\"\n",
     "        After dividing the number by its scale, check if it should be handled as an int\n",
     "        Example: 2000000 = 2M\n",
@@ -105,10 +117,11 @@
     "    def prettify(self, number:object) -> str:\n",
     "        import re\n",
     "        from math import floor, log10\n",
-    "        \"\"\" This method accepts a numeric type and returns a truncated, \"prettified\" string version.\n",
-    "            The prettified version should include one number after the decimal when the truncated number is \n",
-    "            not an integer. It should prettify numbers greater than 6 digits and support millions, billions \n",
-    "            and trillions.\n",
+    "        \"\"\" This method accepts a numeric type and returns a truncated, \"prettified\" \n",
+    "            string version.\n",
+    "            The prettified version should include one number after the decimal when the \n",
+    "            truncated number is not an integer. It should prettify numbers greater than \n",
+    "            6 digits and support millions, billions and trillions.\n",
     "            Parameters\n",
     "            ----------\n",
     "            number : object\n",
@@ -126,6 +139,8 @@
     "        # Handle case when a string has been passed\n",
     "        if type(number) == str:\n",
     "            number = re.sub(\"[^\\d -]+\", \"\", number) # only include numbers in the string\n",
+    "            if len(number) == 0\n",
+    "                number 0\n",
     "            number = float(number)\n",
     "\n",
     "        # If abs(number) < PRETTIFIER_MIN_VALUE, do not pretify it\n",
@@ -134,13 +149,13 @@
     "            return number\n",
     "\n",
     "        # Get the index of the large number symbol ('M', 'B', 'T')\n",
-    "        number_symbols_idx = self.getNumberSymbolIndex(number)\n",
+    "        number_symbols_idx = self.get_number_symbol_index(number)\n",
     "\n",
     "        # Divide number by its scale. Example: 210660000.0 / 10**(3*2) = 210.66\n",
     "        formatted_number = number / 10**(3 * (number_symbols_idx))\n",
     "        \n",
     "        # Handle integer cases: 2000000 = 2M\n",
-    "        if self.handleAsInt(formatted_number):\n",
+    "        if self.handle_as_int(formatted_number):\n",
     "            return '{}{}'.format(int(formatted_number), self.NUMBER_SYMBOLS[number_symbols_idx])\n",
     "\n",
     "        # return pretty version of number with one decimal place and with trailing symbol (210.7M)\n",
@@ -154,6 +169,9 @@
     "    def setUp(self):\n",
     "        self.p = Prettifier()\n",
     "    \n",
+    "    def test_empty_string(self):\n",
+    "        self.assertEqual(self.p.prettify(\"\"), None)\n",
+    "        \n",
     "    def test_none(self):\n",
     "        self.assertEqual(self.p.prettify(None), None)\n",
     "        \n",
