Formatting changes. Empty string works

--- a/util/number_prettifier.ipynb
+++ b/util/number_prettifier.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "test_empty_string (__main__.PrettifierTest) ... ERROR\n",
+      "test_empty_string (__main__.PrettifierTest) ... ok\n",
       "test_hundreds_int (__main__.PrettifierTest) ... ok\n",
       "test_nine_trillion_decimal_string (__main__.PrettifierTest) ... ok\n",
       "test_nine_trillion_decimal_string_with_junk (__main__.PrettifierTest) ... ok\n",
@@ -25,29 +25,19 @@
       "test_two_million_decimal (__main__.PrettifierTest) ... ok\n",
       "test_zero_int (__main__.PrettifierTest) ... ok\n",
       "\n",
-      "======================================================================\n",
-      "ERROR: test_empty_string (__main__.PrettifierTest)\n",
       "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-5-8d2cc45ebb6b>\", line 116, in test_empty_string\n",
-      "    self.assertEqual(self.p.prettify(\"\"), None)\n",
-      "  File \"<ipython-input-5-8d2cc45ebb6b>\", line 87, in prettify\n",
-      "    number = float(number)\n",
-      "ValueError: could not convert string to float: \n",
+      "Ran 15 tests in 0.014s\n",
       "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 15 tests in 0.012s\n",
-      "\n",
-      "FAILED (errors=1)\n"
+      "OK\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.main.TestProgram at 0x1085700f0>"
+       "<unittest.main.TestProgram at 0x1085494a8>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,14 +123,12 @@
     "                The prettified string\n",
     "        \"\"\"\n",
     "        # Base case: handle None gracefully\n",
-    "        if number is None:\n",
+    "        if number is None or (type(number) == str and len(number) == 0):\n",
     "            return None\n",
     "\n",
     "        # Handle case when a string has been passed\n",
     "        if type(number) == str:\n",
     "            number = re.sub(\"[^\\d -]+\", \"\", number) # only include numbers in the string\n",
-    "            if len(number) == 0\n",
-    "                number 0\n",
     "            number = float(number)\n",
     "\n",
     "        # If abs(number) < PRETTIFIER_MIN_VALUE, do not pretify it\n",
