--- a/util/number_prettifier.ipynb
+++ b/util/number_prettifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
       "test_zero_int (__main__.PrettifierTest) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 15 tests in 0.014s\n",
+      "Ran 15 tests in 0.012s\n",
       "\n",
       "OK\n"
      ]
@@ -34,10 +34,10 @@
     {
      "data": {
       "text/plain": [
-       "<unittest.main.TestProgram at 0x1085494a8>"
+       "<unittest.main.TestProgram at 0x1082a4b00>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,8 +58,8 @@
     "        # Large number symbols\n",
     "        self.NUMBER_SYMBOLS = ['', 'K', 'M', 'B', 'T']\n",
     "\n",
-    "        # This is the prettifier's default value of 1 million. Any argument below this value will not \n",
-    "        # be prettified\n",
+    "        # This is the prettifier's default value of 1 million. Any argument below this\n",
+    "        # value will not be prettified\n",
     "        self.PRETTIFIER_MIN_VALUE = 1000000\n",
     "\n",
     "    def get_number_symbol_index(self, number:float) -> int:\n",
