Unit test name fix

--- a/util/number_prettifier.ipynb
+++ b/util/number_prettifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -11,6 +11,7 @@
      "text": [
       "test_empty_string (__main__.PrettifierTest) ... ok\n",
       "test_hundreds_int (__main__.PrettifierTest) ... ok\n",
+      "test_nine_trillion_decimal (__main__.PrettifierTest) ... ok\n",
       "test_nine_trillion_decimal_string (__main__.PrettifierTest) ... ok\n",
       "test_nine_trillion_decimal_string_with_junk (__main__.PrettifierTest) ... ok\n",
       "test_none (__main__.PrettifierTest) ... ok\n",
@@ -19,7 +20,6 @@
       "test_one_million_neg_int (__main__.PrettifierTest) ... ok\n",
       "test_one_neg_int (__main__.PrettifierTest) ... ok\n",
       "test_one_quadrillion_int_string (__main__.PrettifierTest) ... ok\n",
-      "test_one_trillion_decimal (__main__.PrettifierTest) ... ok\n",
       "test_ten_trillion_decimal (__main__.PrettifierTest) ... ok\n",
       "test_thousands_int (__main__.PrettifierTest) ... ok\n",
       "test_two_million_decimal (__main__.PrettifierTest) ... ok\n",
@@ -34,10 +34,10 @@
     {
      "data": {
       "text/plain": [
-       "<unittest.main.TestProgram at 0x1082a4b00>"
+       "<unittest.main.TestProgram at 0x108592c18>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
     "    def test_one_billion_decimal(self):\n",
     "        self.assertEqual(self.p.prettify(1123456789), '1.1B')\n",
     "        \n",
-    "    def test_one_trillion_decimal(self):\n",
+    "    def test_nine_trillion_decimal(self):\n",
     "        self.assertEqual(self.p.prettify(9487634567534), '9.5T')\n",
     "        \n",
     "    def test_nine_trillion_decimal_string(self):\n",
